--- a/patcher-loader/build.gradle
+++ b/patcher-loader/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "24.0.1"
 
     defaultConfig {
-        applicationId "cn.jesse.patchersample"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -21,7 +20,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile project(':patcher-loader')
+    compile project(':patcher-anno')
 }
