--- a/patcher-loader/build.gradle
+++ b/patcher-loader/build.gradle
@@ -20,5 +20,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':patcher-anno')
+    testCompile 'junit:junit:4.12'
+//    compile project(':patcher-anno')
 }
