--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -28,6 +28,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
-    compile project(':patcher-loader')
-//    compile project(':patcher-anno')
+    compile project(':patcher-lib')
 }
