--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath fileTree(dir: 'patcher-build/patch-gradle-plugin/build/libs', include: ['*.jar'])
     }
 }
 
