MODIFY: patch env prepare

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'patcher'
+//apply plugin: 'patcher'
 
 android {
     compileSdkVersion 23
@@ -25,58 +25,58 @@ android {
     }
 }
 
-patcher {
-    sourceApk 'test.apk'
-
-    ignoreWarning true
-
-    useSign true
-
-    buildConfig {
-        patcherId '1.0.0'
-
-        applyMapping 'mapping.txt'
-
-        applyResourceMapping 'R.txt'
-    }
-
-    dex {
-        dexMode 'raw'
-
-        usePreGeneratedPatchDex true
-
-        pattern = ["classes*.dex", "assets/secondary-dex-?.jar"]
-
-        loader = ["cn.jesse.patcher.loader.*",
-                  "cn.jesse.patchersample.MyApplication"]
-    }
-
-    lib {
-        pattern = ["lib/armeabi/*.so"]
-    }
-
-    res {
-        pattern = ["res/*", "assets/*", "resources.arsc", "AndroidManifest.xml"]
-
-        ignoreChange = ["assets/sample_meta.txt"]
-
-        largeModSize = 100
-    }
-
-    packageConfig {
-        configField("patchMessage", "patcher is sample to use")
-
-        configField("platform", "all")
-
-        configField("patchVersion", "1.0")
-    }
-
-    sevenZip {
-        zipArtifact = "com.tencent.mm:SevenZip:1.1.10"
-
-//        path = "/usr/local/bin/7za"
-    }
-}
+//patcher {
+//    sourceApk 'test.apk'
+//
+//    ignoreWarning true
+//
+//    useSign true
+//
+//    buildConfig {
+//        patcherId '1.0.0'
+//
+//        applyMapping 'mapping.txt'
+//
+//        applyResourceMapping 'R.txt'
+//    }
+//
+//    dex {
+//        dexMode 'raw'
+//
+//        usePreGeneratedPatchDex true
+//
+//        pattern = ["classes*.dex", "assets/secondary-dex-?.jar"]
+//
+//        loader = ["cn.jesse.patcher.loader.*",
+//                  "cn.jesse.patchersample.MyApplication"]
+//    }
+//
+//    lib {
+//        pattern = ["lib/armeabi/*.so"]
+//    }
+//
+//    res {
+//        pattern = ["res/*", "assets/*", "resources.arsc", "AndroidManifest.xml"]
+//
+//        ignoreChange = ["assets/sample_meta.txt"]
+//
+//        largeModSize = 100
+//    }
+//
+//    packageConfig {
+//        configField("patchMessage", "patcher is sample to use")
+//
+//        configField("platform", "all")
+//
+//        configField("patchVersion", "1.0")
+//    }
+//
+//    sevenZip {
+//        zipArtifact = "com.tencent.mm:SevenZip:1.1.10"
+//
+////        path = "/usr/local/bin/7za"
+//    }
+//}
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
