--- a/patcher-build/patch-gradle-plugin/build.gradle
+++ b/patcher-build/patch-gradle-plugin/build.gradle
@@ -2,10 +2,12 @@ apply plugin: 'groovy'
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.tools.build:gradle:2.1.0'
     compile gradleApi()
     compile localGroovy()
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.tools.build:gradle:2.1.0'
+    compile project(':patcher-build:patch-lib')
+
 }
 
 sourceSets {
