--- a/patcher-build/patch-lib/build.gradle
+++ b/patcher-build/patch-lib/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 
+[compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
