--- a/patcher-build/patch-lib/build.gradle
+++ b/patcher-build/patch-lib/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'java'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'org.ow2.asm:asm-all:5.0.4'
 }
 
 sourceSets {
